--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -3543,7 +3543,7 @@ The final step in our advanced web technologies journey is to deploy the apps th
 \item The debug server isn't meant for anything more than testing that your code works. It is not built for stability, scalability, or security. 
 \end{enumerate}
 
-\paragraph{} We can solve all of these problems by using appropriate web server software to host our app, and making sure that that server software manages the service lifecycle of our app and makes it available at an appropriate public address. Basically we need a web-app server that understands the WSGI protocol that Flask uses to communicate the functionality of a Python web-app to the wider world of web software. There are a variety of choices for this, uWSGI is popular, robust, and very tunable so it can be optimsed for scalability and eke'ing out every ounce of performance from your hardware, but this leads to it being tricky to set up and deploy. Instead we'll use Waitress which is quicker and simpler to set up to cover the middle ground of serving up a web app when we don't yet know the performance characteristics that we want to optimise for. Note that WSGI app-servers are usually not exposed directly to the public, but run privately within a server, inaccessible to the outside world. A \emh{reverse proxy} is then used to relay communications from the internal, private web-app, to the outside world. This is done for a number of reasons, because traditional static web servers, which are usually chosen to act as reverse-proxies, are well-tested and reliable, and only serve up static resources, they represent less of a security risk if something goes wrong. Because WSGI apps are generally dynamic, and executing perhaps less well tested code, there is more of an attack surface for them. By hiding as much of the WSGI app in private and only exposing the minimum necessary, risks are reduced but not eliminated. We also need a web server that can work as the public facing side of our deployment, a task that is usually given to a traditional, static web-server like NGinX or Caddy. This front-end, public-facing server will act as our reverse-proxy that we just mentioned. The role of the reverse proxy is to take any incoming requests and relay them to our WSGI/Flask app, then take the responses from the WSGI/Flask app and relay them back to the original caller who made the request. We will use Caddy as our reverse-proxy/front-end, static web server. This is for similar reasons to our choice of Waitress for the WSGI app-server. Caddy is simpler to set up than NGinX and covers a happy middle ground for general purposes until you know what you need to optimise for. Note that NGinX is excellent, a very scalable, fast, robust, and relaible tool, but it can be finicky to set up.
+\paragraph{} We can solve all of these problems by using appropriate web server software to host our app, and making sure that that server software manages the service lifecycle of our app and makes it available at an appropriate public address. Basically we need a web-app server that understands the WSGI protocol that Flask uses to communicate the functionality of a Python web-app to the wider world of web software. There are a variety of choices for this, $\mu$WSGI is popular, robust, and very tunable so it can be optimsed for scalability and eke'ing out every ounce of performance from your hardware, but this leads to it being tricky to set up and deploy. Instead we'll use Waitress which is quicker and simpler to set up to cover the middle ground of serving up a web app when we don't yet know the performance characteristics that we want to optimise for. Note that WSGI app-servers are usually not exposed directly to the public, but run privately within a server, inaccessible to the outside world. A \emph{reverse proxy} is then used to relay communications from the internal, private web-app, to the outside world. This is done for a number of reasons, because traditional static web servers, which are usually chosen to act as reverse-proxies, are well-tested and reliable, and only serve up static resources, they represent less of a security risk if something goes wrong. Because WSGI apps are generally dynamic, and executing perhaps less well tested code, there is more of an attack surface for them. By hiding as much of the WSGI app in private and only exposing the minimum necessary, risks are reduced but not eliminated. We also need a web server that can work as the public facing side of our deployment, a task that is usually given to a traditional, static web-server like NGinX or Caddy. This front-end, public-facing server will act as our reverse-proxy that we just mentioned. The role of the reverse proxy is to take any incoming requests and relay them to our WSGI/Flask app, then take the responses from the WSGI/Flask app and relay them back to the original caller who made the request. We will use Caddy as our reverse-proxy/front-end, static web server. This is for similar reasons to our choice of Waitress for the WSGI app-server. Caddy is simpler to set up than NGinX and covers a happy middle ground for general purposes until you know what you need to optimise for. Note that NGinX is excellent, a very scalable, fast, robust, and relaible tool, but it can be finicky to set up.
 
 \paragraph{} We will use $\mu$WSGI (pronounced micro-whisky) for deployment of our Flask apps. Recall that what makes our Flask apps into web-apps, rather than just Python scripts, is the fact that Flask implements a particular interface, called WGSI, which server software can communicate through to present your app's functionality to users of the Web. There are many server applications available that can serve WSGI apps like our Flask apps, $\mu$WSGI happens to be one of these, and a particularly good one at that.
 
