--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -2094,9 +2094,11 @@ FAILED (failures=1)
 
 \chapter{Using Bootstrap to Add Style}
 \label{lab07}
-\paragraph{} We have concentrated so far on building well designed web apps that include useful features from Flask that enable us to test and configure our apps. However, we haven't spent a lot of time on making things look nice. The most we have done is use templates, in section \ref{style}, to scaffold the consistent generation of HTML for our users to read. We have also used static files, which we can use for things like Javascript, Cascading Style Sheets (CSS), icons and images, back in Section \ref{static}. We can further exploit the `/static/' directory to give us an easy way to add some style to our flask app as this is the correct place to store all of those elements that would be made to make our pages look nice. We should recognise however that this module is not a \emph{web design} module, so we shall not spend time concentrating on the design of beautiful web sites, but we shall take a short cut to get a decent and consistent basic design that provide basic framework which can be further modified to produce a beautiful app.
+\paragraph{} We have concentrated so far on building well designed web apps that include useful features from Flask that enable us to test and configure our apps. However, we haven't spent a lot of time on making things look nice. The most we have done is use templates, in section \ref{style}, to scaffold the consistent generation of HTML for our users to read. We have also used static files, which we can use for things like Javascript, Cascading Style Sheets (CSS), icons and images, back in Section \ref{static}. We can further exploit the `/static/' directory to give us an easy way to add some style to our flask app as this is the correct place to store all of those elements that would be made to make our pages look nice. We should recognise however that this module is not a \emph{web design} module\footnote{Although if you're unsure about client side development then make sure to read through the ``Web Technologies: Client Side'' workbook}, so we shall not spend time concentrating on the design of beautiful web sites, but we shall take a short cut to get a decent and consistent basic design that provide basic framework which can be further modified to produce a beautiful app.
 
 \paragraph{} Bootstrap is a set of CSS files and supporting Javascript that make it straightforward to add a basic style, with a selection of different layouts, to your web-app. Originally, Bootstrap was developed by Twitter as an easy way to \emph{bootstrap} from plain HTML to a site with a basic overall design which can be enhanced and which at least looks consistent. This removes the need to initially develop HTML and CSS for layout elements like headers and footers, or menus, all you have to do is use those elements that Bootstrap has pre-defined. You can of course alter these pre-defined elements but at least you don't have to design them when you are also struggling to implement all of the actual functionality.
+
+\paragraph{} In this chapter we'll be using version 5.3.3 of bootstrap, but new versions are released relatively regularly so feel free to get a later version. I'll update things if breaking changes occur, but minor versions won't generally make a huge difference to how things work and the basic relationship between bootstrap, stored in the static folders or used remotely through a CDN, and Flask, shouldn't change significantly at all.
 
 \paragraph{} Because the Flask static directory hosts files that can be served up directly to the client, static is also the natural home for the Bootstrap files. Your HTML templates can then reference these CSS and Javascript files so that they are served to the client when a request is made.
 
@@ -2114,19 +2116,19 @@ static/js/
 \paragraph{} For the moment though we can use the directory hierachy that Bootstrap comes with. Change directory into your static directory  then download Bootstrap from \url{https://github.com/twbs/bootstrap/releases/download/v3.3.5/bootstrap-3.3.5-dist.zip} and unpack it, e.g.
 
 \begin{lstlisting}[style=DOS]
-    $ curl -L -o bootstrap.zip https://github.com/twbs/bootstrap/releases/download/v3.3.5/bootstrap-3.3.5-dist.zip
+    $ curl -L -o bootstrap.zip https://github.com/twbs/bootstrap/releases/download/v5.3.2/bootstrap-5.3.2-dist.zip
     $ unzip bootstrap.zip
 \end{lstlisting}
 
 \paragraph{} Now move the bootstrap files into directory hierarchy that you created. For example, assuming you are in the static directory and you downloaded the bootstrap zip file
 
 \begin{lstlisting}[style=DOS]
-    $ cp -R bootstrap-3.3.5-dist/* .
+    $ cp -R bootstrap-5.3.2-dist/* .
 \end{lstlisting}
 
-\paragraph{} This should recursively copy all of the folder from within the bootstrap directory into the static directory.
+\paragraph{} This should recursively copy all of the folders (a `CSS' folder and a `js' folder) from within the bootstrap directory into the static directory.
 
-\paragraph{} We are now set up to start to use bootstrap to provide some style. But first, let's create an unstyled page, using a Jinja2 template and a simple Flask app that returns an HTML page using the template. We will then extend the template to add some bootstrap functionality to it. So, let's start with the basic template:
+\paragraph{} We are now set up to start to use bootstrap to provide some style. But first, let's create an unstyled page, using a Jinja2 template and a simple Flask app that returns an HTML page using the template. We will then extend the template to add some bootstrap functionality to it. So, let's start with the basic template which we can save to out templates folder as unstyled.html:
 
 \begin{lstlisting}
 <html>
@@ -2150,7 +2152,7 @@ app = Flask(__name__)
 
 @app.route('/')
 def root():
-  return render_template('base.html'), 200
+  return render_template('unstyled.html'), 200
 
 if __name__ == "__main__":
   app.run(host='0.0.0.0', debug=True)
@@ -2194,40 +2196,54 @@ for a little bit of style</p>
 \paragraph{} But let's go a little further an implement the basic Bootstrap template:
 
 \begin{lstlisting}
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
   <title>Bootstrap Demonstation</title>
+  
   <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" />
-  <style>
-    body{ 
-      padding-top: 50px;
-    } 
-  </style>
+
 </head>
 <body>
 
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed"
-      data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-      aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">ProjectName</a>
-      </div>
-      <div id="navbar" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-       </ul>
-       </div>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
     </div>
-  </nav>
+  </div>
+</nav>
 
    <div class="container">
         <h1>HELLO</h1>
@@ -2235,13 +2251,13 @@ for a little bit of style</p>
         <p class="lead">Demonstrating a flask app with templates for html generation and bootstrap for a little bit of style</p>
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+     <script src="{{ url_for('static', filename='/js/bootstrap.bundle.min.js') }}"></script>
+
 </body>
 </html>
 \end{lstlisting}
 
-\paragraph{} There are a few things to note here. Firstly we had to add an extra inline CSS script element to push the page content below the navigation bar. Remove this line (line 6) to see what would happen otherwise. After that you can see that we used to containers, the first containing our navigation bar, and the second containg our page content. Finaly we added a pair of script links, the first to JQuery\footnote{\url{https://jquery.com/}} and the second to the default Bootstrap Javascript file which is in our static directory. Look on the Bootstrap website to find out what you can do with the Bootstrap Javascript, and on the JQuery homepage to see what functionality JQuery offers you.
+\paragraph{} There are a few things to note here. We used to containers, the first containing our navigation bar, and the second containing our page content. Secondly we added a script link to the default Bootstrap Javascript file which is in our static/js directory. Look on the Bootstrap website to find out what you can do with the Bootstrap Javascript.
 
 \begin{figure}[H]
 \centering
