Update example to Python3

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1944,7 +1944,7 @@ level = DEBUG
 
 \paragraph{} Having set everything up all the configuration details and the basic environment we now need to make use of that set up within our python app. Create a new file called `loggingapp.py' and enter the following code:
 \begin{lstlisting}
-import ConfigParser
+import configparser
 import logging
 
 from logging.handlers import RotatingFileHandler
@@ -1959,7 +1959,7 @@ def root():
         return "Hello Napier from the configuration testing app (Now with added logging)" 
 
 def init(app):
-    config = ConfigParser.ConfigParser()
+    config = configparser.ConfigParser()
     try:
         config_location = "etc/logging.cfg"
         config.read(config_location)
